fix mobile math/latex overflow

--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -1,25 +1,3 @@
-.tleft {
-    float: left;
-    margin: 15px 15px;
-    overflow: auto;
-    clear: left;
-}
-
-.tright {
-    float: right;
-    margin: 15px 15px;
-    overflow: auto;
-    clear: right;
-}
-
-.thumb {
-    font-size: 80%;
-    text-align: center;
-    border-style: solid;
-    border-width: 1px;
-    border-color: black;
-}
-
 .text-size-1 {
     font-size: 20px;
 }
@@ -113,6 +91,11 @@ a:hover, a:hover * {
     .show-on-desktop {
         display: none;
     }
+
+    .content span > img {
+        max-width: 100%;
+        height: auto;
+    }
 }
 
 @media (min-width: 768px) {
@@ -122,6 +105,28 @@ a:hover, a:hover * {
 
     .show-on-desktop {
         display: block;
+    }
+
+    .tleft {
+        float: left;
+        margin: 15px 15px;
+        overflow: auto;
+        clear: left;
+    }
+
+    .tright {
+        float: right;
+        margin: 15px 15px;
+        overflow: auto;
+        clear: right;
+    }
+
+    .thumb {
+        font-size: 80%;
+        text-align: center;
+        border-style: solid;
+        border-width: 1px;
+        border-color: black;
     }
 }
 
